--- a/cppConsole/cppConsole.cbp
+++ b/cppConsole/cppConsole.cbp
@@ -47,6 +47,9 @@
 		<Unit filename="TimeRecord.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="hwmatrix.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="hwpair.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
